tests/snapshots/snapshot_errors__snapshot_error_trait_missing_method.snap
---
source: tests/snapshot_errors.rs
expression: output
---
[31m[E018] Error:[0m trait `Display` requires method `display` but it is not implemented for `User`
    [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m trait_missing_method.fl:11:1 [38;5;246m][0m
    [38;5;246m│[0m
 [38;5;246m11 │[0m [31m╭[0m[31m─[0m[31m▶[0m[31m [0m[31mf[0m[31mo[0m[31mr[0m[31m [0m[31mU[0m[31ms[0m[31me[0m[31mr[0m[31m:[0m[31m [0m[31mD[0m[31mi[0m[31ms[0m[31mp[0m[31ml[0m[31ma[0m[31my[0m[31m [0m[31m{[0m
 [38;5;240m   ┆[0m [31m┆[0m   
 [38;5;246m15 │[0m [31m├[0m[31m─[0m[31m▶[0m[31m [0m[31m}[0m
 [38;5;240m   │[0m [31m│[0m       
 [38;5;240m   │[0m [31m╰[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m missing method `display`
 [38;5;240m   │[0m     
 [38;5;240m   │[0m     [38;5;115mHelp[0m: add `fn display(self, ...) { ... }` to the for block
[38;5;246m────╯[0m
[33m[W001] Warning:[0m unused variable `toString`
    [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m trait_missing_method.fl:11:1 [38;5;246m][0m
    [38;5;246m│[0m
 [38;5;246m11 │[0m [33m╭[0m[33m─[0m[33m▶[0m[33m [0m[33mf[0m[33mo[0m[33mr[0m[33m [0m[33mU[0m[33ms[0m[33me[0m[33mr[0m[33m:[0m[33m [0m[33mD[0m[33mi[0m[33ms[0m[33mp[0m[33ml[0m[33ma[0m[33my[0m[33m [0m[33m{[0m
 [38;5;240m   ┆[0m [33m┆[0m   
 [38;5;246m15 │[0m [33m├[0m[33m─[0m[33m▶[0m[33m [0m[33m}[0m
 [38;5;240m   │[0m [33m│[0m       
 [38;5;240m   │[0m [33m╰[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m defined but never used
 [38;5;240m   │[0m     
 [38;5;240m   │[0m     [38;5;115mHelp[0m: prefix with underscore `_toString` to suppress
[38;5;246m────╯[0m
