tests/snapshots/snapshot_errors__snapshot_error_trait_used_as_parameter_type.snap
---
source: tests/snapshot_errors.rs
expression: output
---
[31m[E049] Error:[0m `Repo` is a trait, not a type — traits cannot be used in type positions
    [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m test.fl:12:18 [38;5;246m][0m
    [38;5;246m│[0m
 [38;5;246m12 │[0m [38;5;249mf[0m[38;5;249mn[0m[38;5;249m [0m[38;5;249md[0m[38;5;249mo[0m[38;5;249mT[0m[38;5;249mh[0m[38;5;249mi[0m[38;5;249mn[0m[38;5;249mg[0m[38;5;249m([0m[38;5;249mr[0m[38;5;249me[0m[38;5;249mp[0m[38;5;249mo[0m[38;5;249m:[0m[38;5;249m [0m[31mR[0m[31me[0m[31mp[0m[31mo[0m[38;5;249m)[0m[38;5;249m [0m[38;5;249m-[0m[38;5;249m>[0m[38;5;249m [0m[38;5;249ms[0m[38;5;249mt[0m[38;5;249mr[0m[38;5;249mi[0m[38;5;249mn[0m[38;5;249mg[0m[38;5;249m [0m[38;5;249m{[0m
 [38;5;240m   │[0m                  [31m─[0m[31m─[0m[31m┬[0m[31m─[0m  
 [38;5;240m   │[0m                    [31m╰[0m[31m─[0m[31m─[0m[31m─[0m trait, not a type
 [38;5;240m   │[0m 
 [38;5;240m   │[0m [38;5;115mHelp[0m: traits are compile-time contracts and cannot appear as types
[38;5;246m────╯[0m
[33m[W001] Warning:[0m unused variable `create`
    [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m test.fl:8:1 [38;5;246m][0m
    [38;5;246m│[0m
 [38;5;246m 8 │[0m [33m╭[0m[33m─[0m[33m▶[0m[33m [0m[33mf[0m[33mo[0m[33mr[0m[33m [0m[33mM[0m[33my[0m[33mR[0m[33me[0m[33mp[0m[33mo[0m[33m:[0m[33m [0m[33mR[0m[33me[0m[33mp[0m[33mo[0m[33m [0m[33m{[0m
 [38;5;240m   ┆[0m [33m┆[0m   
 [38;5;246m10 │[0m [33m├[0m[33m─[0m[33m▶[0m[33m [0m[33m}[0m
 [38;5;240m   │[0m [33m│[0m       
 [38;5;240m   │[0m [33m╰[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m defined but never used
 [38;5;240m   │[0m     
 [38;5;240m   │[0m     [38;5;115mHelp[0m: prefix with underscore `_create` to suppress
[38;5;246m────╯[0m
[33m[W001] Warning:[0m unused variable `doThing`
    [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m test.fl:12:1 [38;5;246m][0m
    [38;5;246m│[0m
 [38;5;246m12 │[0m [33m╭[0m[33m─[0m[33m▶[0m[33m [0m[33mf[0m[33mn[0m[33m [0m[33md[0m[33mo[0m[33mT[0m[33mh[0m[33mi[0m[33mn[0m[33mg[0m[33m([0m[33mr[0m[33me[0m[33mp[0m[33mo[0m[33m:[0m[33m [0m[33mR[0m[33me[0m[33mp[0m[33mo[0m[33m)[0m[33m [0m[33m-[0m[33m>[0m[33m [0m[33ms[0m[33mt[0m[33mr[0m[33mi[0m[33mn[0m[33mg[0m[33m [0m[33m{[0m
 [38;5;240m   ┆[0m [33m┆[0m   
 [38;5;246m14 │[0m [33m├[0m[33m─[0m[33m▶[0m[33m [0m[33m}[0m
 [38;5;240m   │[0m [33m│[0m       
 [38;5;240m   │[0m [33m╰[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m defined but never used
 [38;5;240m   │[0m     
 [38;5;240m   │[0m     [38;5;115mHelp[0m: prefix with underscore `_doThing` to suppress
[38;5;246m────╯[0m
