tests/snapshots/snapshot_errors__snapshot_error_trait_used_as_return_type.snap
---
source: tests/snapshot_errors.rs
expression: output
---
[31m[E049] Error:[0m `Repo` is a trait, not a type — traits cannot be used in type positions
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m test.fl:6:17 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m6 │[0m [38;5;249mf[0m[38;5;249mn[0m[38;5;249m [0m[38;5;249mg[0m[38;5;249me[0m[38;5;249mt[0m[38;5;249mR[0m[38;5;249me[0m[38;5;249mp[0m[38;5;249mo[0m[38;5;249m([0m[38;5;249m)[0m[38;5;249m [0m[38;5;249m-[0m[38;5;249m>[0m[38;5;249m [0m[31mR[0m[31me[0m[31mp[0m[31mo[0m[31m [0m[38;5;249m{[0m
 [38;5;240m  │[0m                 [31m─[0m[31m─[0m[31m┬[0m[31m─[0m[31m─[0m  
 [38;5;240m  │[0m                   [31m╰[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m trait, not a type
 [38;5;240m  │[0m 
 [38;5;240m  │[0m [38;5;115mHelp[0m: traits are compile-time contracts and cannot appear as types
[38;5;246m───╯[0m
[33m[W002] Warning:[0m `todo` is a placeholder that will panic at runtime
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m test.fl:7:3 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m7 │[0m [38;5;249m [0m[38;5;249m [0m[33mt[0m[33mo[0m[33md[0m[33mo[0m
 [38;5;240m  │[0m   [33m─[0m[33m─[0m[33m┬[0m[33m─[0m  
 [38;5;240m  │[0m     [33m╰[0m[33m─[0m[33m─[0m[33m─[0m not yet implemented
 [38;5;240m  │[0m 
 [38;5;240m  │[0m [38;5;115mHelp[0m: replace with actual implementation before shipping
[38;5;246m───╯[0m
[33m[W001] Warning:[0m unused variable `getRepo`
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m test.fl:6:1 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m6 │[0m [33m╭[0m[33m─[0m[33m▶[0m[33m [0m[33mf[0m[33mn[0m[33m [0m[33mg[0m[33me[0m[33mt[0m[33mR[0m[33me[0m[33mp[0m[33mo[0m[33m([0m[33m)[0m[33m [0m[33m-[0m[33m>[0m[33m [0m[33mR[0m[33me[0m[33mp[0m[33mo[0m[33m [0m[33m{[0m
 [38;5;240m  ┆[0m [33m┆[0m   
 [38;5;246m8 │[0m [33m├[0m[33m─[0m[33m▶[0m[33m [0m[33m}[0m
 [38;5;240m  │[0m [33m│[0m       
 [38;5;240m  │[0m [33m╰[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m defined but never used
 [38;5;240m  │[0m     
 [38;5;240m  │[0m     [38;5;115mHelp[0m: prefix with underscore `_getRepo` to suppress
[38;5;246m───╯[0m
