tests/snapshots/snapshot_errors__snapshot_error_unhandled_result.snap
---
source: tests/snapshot_errors.rs
expression: output
---
[31m[E006] Error:[0m unhandled `Result` value
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m test.fl:1:1 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [31mO[0m[31mk[0m[31m([0m[31m4[0m[31m2[0m[31m)[0m
 [38;5;240m  │[0m [31m─[0m[31m─[0m[31m─[0m[31m┬[0m[31m─[0m[31m─[0m  
 [38;5;240m  │[0m    [31m╰[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m this `Result` is not used
 [38;5;240m  │[0m 
 [38;5;240m  │[0m [38;5;115mHelp[0m: use `?`, `match`, or assign to `_`
[38;5;246m───╯[0m
