tests/snapshots/snapshot_errors__snapshot_error_unknown_named_argument.snap
---
source: tests/snapshot_errors.rs
expression: output
---
[31m[E015] Error:[0m unknown argument `pooopy` in call to `add`
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m test.fl:2:12 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m2 │[0m [38;5;249mc[0m[38;5;249mo[0m[38;5;249mn[0m[38;5;249ms[0m[38;5;249mt[0m[38;5;249m [0m[38;5;249m_[0m[38;5;249mx[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[31ma[0m[31md[0m[31md[0m[31m([0m[31mp[0m[31mo[0m[31mo[0m[31mo[0m[31mp[0m[31my[0m[31m:[0m[31m [0m[31m2[0m[31m2[0m[31m)[0m
 [38;5;240m  │[0m            [31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m┬[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m  
 [38;5;240m  │[0m                   [31m╰[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m `pooopy` is not a parameter of `add`
 [38;5;240m  │[0m 
 [38;5;240m  │[0m [38;5;115mHelp[0m: expected one of: `a`, `b`
[38;5;246m───╯[0m
[31m[E001] Error:[0m `add` expects 2 arguments, found 1
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m test.fl:2:12 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m2 │[0m [38;5;249mc[0m[38;5;249mo[0m[38;5;249mn[0m[38;5;249ms[0m[38;5;249mt[0m[38;5;249m [0m[38;5;249m_[0m[38;5;249mx[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[31ma[0m[31md[0m[31md[0m[31m([0m[31mp[0m[31mo[0m[31mo[0m[31mo[0m[31mp[0m[31my[0m[31m:[0m[31m [0m[31m2[0m[31m2[0m[31m)[0m
 [38;5;240m  │[0m            [31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m┬[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m  
 [38;5;240m  │[0m                   [31m╰[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m wrong number of arguments
[38;5;246m───╯[0m
