tests/snapshots/snapshot_errors__snapshot_error_untrusted_import.snap
---
source: tests/snapshot_errors.rs
expression: output
---
[31m[E014] Error:[0m calling untrusted import `fetchUser` requires `try`
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m test.fl:2:12 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m2 │[0m [38;5;249mc[0m[38;5;249mo[0m[38;5;249mn[0m[38;5;249ms[0m[38;5;249mt[0m[38;5;249m [0m[38;5;249m_[0m[38;5;249mx[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[31mf[0m[31me[0m[31mt[0m[31mc[0m[31mh[0m[31mU[0m[31ms[0m[31me[0m[31mr[0m[31m([0m[31m"[0m[31m1[0m[31m2[0m[31m3[0m[31m"[0m[31m)[0m
 [38;5;240m  │[0m            [31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m┬[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m  
 [38;5;240m  │[0m                    [31m╰[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m untrusted TS import
 [38;5;240m  │[0m 
 [38;5;240m  │[0m [38;5;115mHelp[0m: Use `try fetchUser(...)` or mark the import as `trusted`
[38;5;246m───╯[0m
