tests/snapshots/snapshot_errors__snapshot_error_untrusted_result_used_as_value.snap
---
source: tests/snapshot_errors.rs
expression: output
---
[31m[E001] Error:[0m function `process`: expected return type `string`, found an untrusted import `Result` — use `?` to unwrap or `import trusted` if it cannot fail
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m test.fl:4:5 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m4 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[31mr[0m[31me[0m[31ms[0m[31mu[0m[31ml[0m[31mt[0m
 [38;5;240m  │[0m     [31m─[0m[31m─[0m[31m─[0m[31m┬[0m[31m─[0m[31m─[0m[31m─[0m  
 [38;5;240m  │[0m        [31m╰[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m use `?` to unwrap or `import trusted`
[38;5;246m───╯[0m
[33m[W001] Warning:[0m unused variable `process`
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m test.fl:2:1 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m2 │[0m [33m╭[0m[33m─[0m[33m▶[0m[33m [0m[33mf[0m[33mn[0m[33m [0m[33mp[0m[33mr[0m[33mo[0m[33mc[0m[33me[0m[33ms[0m[33ms[0m[33m([0m[33mx[0m[33m:[0m[33m [0m[33ms[0m[33mt[0m[33mr[0m[33mi[0m[33mn[0m[33mg[0m[33m)[0m[33m [0m[33m-[0m[33m>[0m[33m [0m[33ms[0m[33mt[0m[33mr[0m[33mi[0m[33mn[0m[33mg[0m[33m [0m[33m{[0m
 [38;5;240m  ┆[0m [33m┆[0m   
 [38;5;246m5 │[0m [33m├[0m[33m─[0m[33m▶[0m[33m [0m[33m}[0m
 [38;5;240m  │[0m [33m│[0m      
 [38;5;240m  │[0m [33m╰[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m defined but never used
 [38;5;240m  │[0m [33m│[0m   
 [38;5;240m  │[0m [33m│[0m   [38;5;115mHelp[0m: prefix with underscore `_process` to suppress
[38;5;246m───╯[0m
