tests/snapshots/snapshot_errors__snapshot_error_unused_import.snap
---
source: tests/snapshot_errors.rs
assertion_line: 59
expression: output
---
[31m[E009] Error:[0m `useState` is never used
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m test.zs:1:10 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249mi[0m[38;5;249mm[0m[38;5;249mp[0m[38;5;249mo[0m[38;5;249mr[0m[38;5;249mt[0m[38;5;249m [0m[38;5;249m{[0m[38;5;249m [0m[31mu[0m[31ms[0m[31me[0m[31mS[0m[31mt[0m[31ma[0m[31mt[0m[31me[0m[38;5;249m [0m[38;5;249m}[0m[38;5;249m [0m[38;5;249mf[0m[38;5;249mr[0m[38;5;249mo[0m[38;5;249mm[0m[38;5;249m [0m[38;5;249m"[0m[38;5;249mr[0m[38;5;249me[0m[38;5;249ma[0m[38;5;249mc[0m[38;5;249mt[0m[38;5;249m"[0m
 [38;5;240m  │[0m          [31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m┬[0m[31m─[0m[31m─[0m[31m─[0m  
 [38;5;240m  │[0m              [31m╰[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m unused import
 [38;5;240m  │[0m 
 [38;5;240m  │[0m [38;5;115mHelp[0m: Remove this import or use it in the code
[38;5;246m───╯[0m
